partially solved layout shift of Footer when clicking on image to navigate to Gallery

--- a/my-app/src/pages/About/About.scss
+++ b/my-app/src/pages/About/About.scss
@@ -1,6 +1,7 @@
 @import '../../styles/Colors.scss';
 
 .about-container {
+    min-height: 70vh;
     display: flex;
     flex-direction: row;
     align-items: center;
