--- a/my-app/src/pages/Contact/Contact.scss
+++ b/my-app/src/pages/Contact/Contact.scss
@@ -1,6 +1,7 @@
 @import '../../styles/Colors.scss';
 
 .contact-container {
+    min-height: 70vh;
     display: flex;
     flex-direction: row;
     align-items: center;
