--- a/my-app/src/pages/Works/Works.scss
+++ b/my-app/src/pages/Works/Works.scss
@@ -1,4 +1,5 @@
 .gallery-container {
+    min-height: 70vh;
     width: 80%;
     padding: 0 10%;
 
